syntax = "proto3";

package prototype;

option go_package = "github.com/coschain/contentos-go/prototype";

message uint128{
    uint64 hi = 1;
    uint64 lo = 2;
}

message account_name{
    string value = 1;
}

message chain_id{
    uint32 value = 1;
}

message safe64{
    int64 value = 1;
}

message coin{
    safe64 amount = 1;
}

message vest{
    safe64 amount = 1;
}

message public_key_type{
    bytes data = 1;
}

message private_key_type{
    bytes data = 1;
}

message kv_account_auth{
    account_name name = 1;
    uint32 weight = 2;
}

message kv_key_auth{
    public_key_type key = 1;
    uint32 weight = 2;
}

message authority{
    enum classification{
         owner   = 0;
         active  = 1;
         key     = 2;
         posting = 3;
    }
    classification cf = 1;
    uint32 weight_threshold = 2;
    repeated kv_account_auth account_auths = 3;
    repeated kv_key_auth key_auths = 4;
    //map<namex, uint32> account_auths = 2;
    // map<public_key_type, uint32> key_auths = 3;
}

message time_point_sec{
    uint32 utc_seconds = 1;
}

message signature_type{
    bytes sig = 1;
}

message sha256{
    bytes hash = 1;
}

message chain_properties{
    coin account_creation_fee = 1;
    uint32 maximum_block_size = 2;
}
